Contacto-Extraterrstre-3d/src/main/java/antlr4/com/antlr4/com/YLenguajeParser.java
// Generated from src/main/java/antlr4/com/YLenguajeParser.g4 by ANTLR 4.13.2
package antlr4.com.antlr4.com;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class YLenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, ESTRUCTURAS=3, ESTRUCTURA=4, CADENA=5, ENTERO=6, FLOTANTE=7, 
		CARACTER=8, BOOL=9, FUNCIONES=10, DEFINIR=11, SI=12, ENTONCES=13, SINO=14, 
		CONTRARIO=15, ELEGITR=16, CASO=17, ROMPER=18, PARA=19, CONTINUAR=20, MIENTRAS=21, 
		HACER=22, IMPRIMIR=23, LEER=24, VERDADERO=25, FALSO=26, RETORNAR=27, RETORNO_FUNC=28, 
		DOS_PUNTOS=29, LCORCH=30, RCORCH=31, LPAREN=32, RPAREN=33, COMA=34, LLLAVE=35, 
		RLLAVE=36, PUNTO=37, PUNTO_COMA=38, IGUAL=39, NO_IGUAL=40, MENOR_IGUAL=41, 
		MAYOR_IGUAL=42, MENOR=43, MAYOR=44, AND=45, OR=46, NOT=47, INCREMENTO=48, 
		DECREMENTO=49, ASIG=50, SUMA=51, RESTA=52, MULT=53, DIV=54, ID=55, INT=56, 
		DECIMAL=57, STRING=58, CHAR=59, LINE_COMMENT=60, BLOCK_COMMENT=61, NEWLINE=62, 
		WS=63;
	public static final int
		RULE_inicio = 0, RULE_bloq_estruc = 1, RULE_esctruc = 2, RULE_bloq_func = 3, 
		RULE_bloc_func = 4, RULE_params = 5, RULE_bloc_llaves = 6, RULE_val_arreglo = 7, 
		RULE_instrucciones = 8, RULE_bloc_si = 9, RULE_bloque = 10, RULE_definiciones = 11, 
		RULE_asignaciones = 12, RULE_expresion = 13, RULE_tipos = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "bloq_estruc", "esctruc", "bloq_func", "bloc_func", "params", 
			"bloc_llaves", "val_arreglo", "instrucciones", "bloc_si", "bloque", "definiciones", 
			"asignaciones", "expresion", "tipos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'%estructuras'", "'estructura'", "'cadena'", "'entero'", 
			"'flotante'", "'caracter'", "'bool'", "'%funciones'", "'definir'", "'si'", 
			"'entonces'", "'sino'", "'contrario'", "'elegir'", "'caso'", "'romper'", 
			"'para'", "'continuar'", "'mientras'", "'hacer'", "'imprimir'", "'leer'", 
			"'verdadero'", "'falso'", "'retornar'", "'->'", "':'", "'['", "']'", 
			"'('", "')'", "','", "'{'", "'}'", "'.'", "';'", "'=='", "'!='", "'<='", 
			"'>='", "'<'", "'>'", "'&&'", "'||'", "'!'", "'++'", "'--'", "'='", "'+'", 
			"'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "ESTRUCTURAS", "ESTRUCTURA", "CADENA", "ENTERO", 
			"FLOTANTE", "CARACTER", "BOOL", "FUNCIONES", "DEFINIR", "SI", "ENTONCES", 
			"SINO", "CONTRARIO", "ELEGITR", "CASO", "ROMPER", "PARA", "CONTINUAR", 
			"MIENTRAS", "HACER", "IMPRIMIR", "LEER", "VERDADERO", "FALSO", "RETORNAR", 
			"RETORNO_FUNC", "DOS_PUNTOS", "LCORCH", "RCORCH", "LPAREN", "RPAREN", 
			"COMA", "LLLAVE", "RLLAVE", "PUNTO", "PUNTO_COMA", "IGUAL", "NO_IGUAL", 
			"MENOR_IGUAL", "MAYOR_IGUAL", "MENOR", "MAYOR", "AND", "OR", "NOT", "INCREMENTO", 
			"DECREMENTO", "ASIG", "SUMA", "RESTA", "MULT", "DIV", "ID", "INT", "DECIMAL", 
			"STRING", "CHAR", "LINE_COMMENT", "BLOCK_COMMENT", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YLenguajeParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YLenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(YLenguajeParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(YLenguajeParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YLenguajeParser.NEWLINE, i);
		}
		public Bloq_estrucContext bloq_estruc() {
			return getRuleContext(Bloq_estrucContext.class,0);
		}
		public Bloq_funcContext bloq_func() {
			return getRuleContext(Bloq_funcContext.class,0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).exitInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeParserVisitor ) return ((YLenguajeParserVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(30);
					match(NEWLINE);
					}
					} 
				}
				setState(35);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ESTRUCTURAS) {
				{
				setState(36);
				bloq_estruc();
				}
			}

			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FUNCIONES) {
				{
				setState(39);
				bloq_func();
				}
			}

			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(42);
				match(NEWLINE);
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloq_estrucContext extends ParserRuleContext {
		public TerminalNode ESTRUCTURAS() { return getToken(YLenguajeParser.ESTRUCTURAS, 0); }
		public TerminalNode NEWLINE() { return getToken(YLenguajeParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YLenguajeParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YLenguajeParser.DEDENT, 0); }
		public List<EsctrucContext> esctruc() {
			return getRuleContexts(EsctrucContext.class);
		}
		public EsctrucContext esctruc(int i) {
			return getRuleContext(EsctrucContext.class,i);
		}
		public Bloq_estrucContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloq_estruc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).enterBloq_estruc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).exitBloq_estruc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeParserVisitor ) return ((YLenguajeParserVisitor<? extends T>)visitor).visitBloq_estruc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloq_estrucContext bloq_estruc() throws RecognitionException {
		Bloq_estrucContext _localctx = new Bloq_estrucContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloq_estruc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(ESTRUCTURAS);
			setState(51);
			match(NEWLINE);
			setState(52);
			match(INDENT);
			setState(54); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(53);
				esctruc();
				}
				}
				setState(56); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ESTRUCTURA );
			setState(58);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EsctrucContext extends ParserRuleContext {
		public TerminalNode ESTRUCTURA() { return getToken(YLenguajeParser.ESTRUCTURA, 0); }
		public TerminalNode ID() { return getToken(YLenguajeParser.ID, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(YLenguajeParser.DOS_PUNTOS, 0); }
		public TerminalNode NEWLINE() { return getToken(YLenguajeParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YLenguajeParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YLenguajeParser.DEDENT, 0); }
		public List<DefinicionesContext> definiciones() {
			return getRuleContexts(DefinicionesContext.class);
		}
		public DefinicionesContext definiciones(int i) {
			return getRuleContext(DefinicionesContext.class,i);
		}
		public EsctrucContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_esctruc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).enterEsctruc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).exitEsctruc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeParserVisitor ) return ((YLenguajeParserVisitor<? extends T>)visitor).visitEsctruc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EsctrucContext esctruc() throws RecognitionException {
		EsctrucContext _localctx = new EsctrucContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_esctruc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(ESTRUCTURA);
			setState(61);
			match(ID);
			setState(62);
			match(DOS_PUNTOS);
			setState(63);
			match(NEWLINE);
			setState(64);
			match(INDENT);
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				definiciones();
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 36028797018964960L) != 0) );
			setState(70);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloq_funcContext extends ParserRuleContext {
		public TerminalNode FUNCIONES() { return getToken(YLenguajeParser.FUNCIONES, 0); }
		public TerminalNode NEWLINE() { return getToken(YLenguajeParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YLenguajeParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YLenguajeParser.DEDENT, 0); }
		public List<Bloc_funcContext> bloc_func() {
			return getRuleContexts(Bloc_funcContext.class);
		}
		public Bloc_funcContext bloc_func(int i) {
			return getRuleContext(Bloc_funcContext.class,i);
		}
		public Bloq_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloq_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).enterBloq_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).exitBloq_func(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeParserVisitor ) return ((YLenguajeParserVisitor<? extends T>)visitor).visitBloq_func(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloq_funcContext bloq_func() throws RecognitionException {
		Bloq_funcContext _localctx = new Bloq_funcContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bloq_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(FUNCIONES);
			setState(73);
			match(NEWLINE);
			setState(74);
			match(INDENT);
			setState(76); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(75);
				bloc_func();
				}
				}
				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEFINIR );
			setState(80);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloc_funcContext extends ParserRuleContext {
		public TerminalNode DEFINIR() { return getToken(YLenguajeParser.DEFINIR, 0); }
		public List<TerminalNode> ID() { return getTokens(YLenguajeParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(YLenguajeParser.ID, i);
		}
		public TerminalNode LPAREN() { return getToken(YLenguajeParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(YLenguajeParser.RPAREN, 0); }
		public TerminalNode RETORNO_FUNC() { return getToken(YLenguajeParser.RETORNO_FUNC, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(YLenguajeParser.DOS_PUNTOS, 0); }
		public TerminalNode NEWLINE() { return getToken(YLenguajeParser.NEWLINE, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Bloc_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).enterBloc_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).exitBloc_func(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeParserVisitor ) return ((YLenguajeParserVisitor<? extends T>)visitor).visitBloc_func(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloc_funcContext bloc_func() throws RecognitionException {
		Bloc_funcContext _localctx = new Bloc_funcContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bloc_func);
		int _la;
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				match(DEFINIR);
				setState(83);
				match(ID);
				setState(84);
				match(LPAREN);
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 36028797018964960L) != 0)) {
					{
					setState(85);
					params();
					}
				}

				setState(88);
				match(RPAREN);
				setState(89);
				match(RETORNO_FUNC);
				setState(92);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CADENA:
				case ENTERO:
				case FLOTANTE:
				case CARACTER:
				case BOOL:
					{
					setState(90);
					tipos();
					}
					break;
				case ID:
					{
					setState(91);
					match(ID);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(94);
				match(DOS_PUNTOS);
				setState(95);
				match(NEWLINE);
				setState(96);
				bloque();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(DEFINIR);
				setState(98);
				match(ID);
				setState(99);
				match(LPAREN);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 36028797018964960L) != 0)) {
					{
					setState(100);
					params();
					}
				}

				setState(103);
				match(RPAREN);
				setState(104);
				match(DOS_PUNTOS);
				setState(105);
				match(NEWLINE);
				setState(106);
				bloque();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(YLenguajeParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(YLenguajeParser.ID, i);
		}
		public List<TiposContext> tipos() {
			return getRuleContexts(TiposContext.class);
		}
		public TiposContext tipos(int i) {
			return getRuleContext(TiposContext.class,i);
		}
		public List<TerminalNode> LCORCH() { return getTokens(YLenguajeParser.LCORCH); }
		public TerminalNode LCORCH(int i) {
			return getToken(YLenguajeParser.LCORCH, i);
		}
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> RCORCH() { return getTokens(YLenguajeParser.RCORCH); }
		public TerminalNode RCORCH(int i) {
			return getToken(YLenguajeParser.RCORCH, i);
		}
		public List<TerminalNode> COMA() { return getTokens(YLenguajeParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(YLenguajeParser.COMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeParserVisitor ) return ((YLenguajeParserVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CADENA:
			case ENTERO:
			case FLOTANTE:
			case CARACTER:
			case BOOL:
				{
				setState(109);
				tipos();
				}
				break;
			case ID:
				{
				setState(110);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(113);
			match(ID);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LCORCH) {
				{
				{
				setState(114);
				match(LCORCH);
				setState(115);
				expresion(0);
				setState(116);
				match(RCORCH);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(123);
				match(COMA);
				setState(126);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CADENA:
				case ENTERO:
				case FLOTANTE:
				case CARACTER:
				case BOOL:
					{
					setState(124);
					tipos();
					}
					break;
				case ID:
					{
					setState(125);
					match(ID);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(128);
				match(ID);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LCORCH) {
					{
					{
					setState(129);
					match(LCORCH);
					setState(130);
					expresion(0);
					setState(131);
					match(RCORCH);
					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloc_llavesContext extends ParserRuleContext {
		public List<TerminalNode> LLLAVE() { return getTokens(YLenguajeParser.LLLAVE); }
		public TerminalNode LLLAVE(int i) {
			return getToken(YLenguajeParser.LLLAVE, i);
		}
		public List<Val_arregloContext> val_arreglo() {
			return getRuleContexts(Val_arregloContext.class);
		}
		public Val_arregloContext val_arreglo(int i) {
			return getRuleContext(Val_arregloContext.class,i);
		}
		public List<TerminalNode> RLLAVE() { return getTokens(YLenguajeParser.RLLAVE); }
		public TerminalNode RLLAVE(int i) {
			return getToken(YLenguajeParser.RLLAVE, i);
		}
		public List<TerminalNode> COMA() { return getTokens(YLenguajeParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(YLenguajeParser.COMA, i);
		}
		public Bloc_llavesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc_llaves; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).enterBloc_llaves(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeParserListener ) ((YLenguajeParserListener)listener).exitBloc_llaves(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeParserVisitor ) return ((YLenguajeParserVisitor<? extends T>)visitor).visitBloc_llaves(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloc_llavesContext bloc_llaves() throws RecognitionException {
		Bloc_llavesContext _localctx = new Bloc_llavesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bloc_llaves);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(LLLAVE);
			setState(144);
			val_arreglo();
			setState(145);
			match(RLLAVE);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(146);
				match(COMA);
				setState(147);
				match(LLLAVE);
				setState(148);
				val_arreglo();
				setState(149);
				match(RLLAVE);
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
